refact: 메소드 네이밍 변경 및 dto 구조 변경 - 최종 응답 객체인 Response 객체와 Response를 구성하는 Info 객체를 분리 -ref:#42